--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#877B7B</color>      <!-- Closest material #757575 -->
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#F88683</color>   <!-- Closest material #ff8a80 -->
-    <color name="white">#ffffff</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorSecondary">#6A6A6A</color>
+    <color name="colorSecondaryDark">#3F3F3F</color>
+    <color name="colorSupport">#DAE0E6</color>
+
+    <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="background_color">#F2F2F2</color> <!-- Closest material #f5f5f5 -->
-    <color name="support_color">#DAE0E6</color>
-    <color name="divider_color">@color/support_color</color>
+
+    <color name="background_color">#F2F2F2</color>
     
     <color name="textColorPrimary">#212121</color>
     <color name="textColorSecondary">#6A6A6A</color>
 
     <!-- view pager dots -->
     <color name="view_pager_active_dot">@color/black</color>
-    <color name="view_pager_inactive_dot">@color/colorPrimary</color>
+    <color name="view_pager_inactive_dot">@color/colorSecondary</color>
+
+    <color name="feed_search_field_background_color">#FAFAFA</color>
+    <color name="feed_search_name_text_color">#60000000</color>
 </resources>
