--- a/app/src/main/res/layout/master_activity.xml
+++ b/app/src/main/res/layout/master_activity.xml
@@ -37,7 +37,7 @@
                     android:layout_height="@dimen/master_image_slider_height">
 
                     <android.support.v4.view.ViewPager
-                        android:id="@+id/pager"
+                        android:id="@+id/image_slider"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
                 </RelativeLayout>
