--- a/app/src/main/res/drawable/ic_painting.xml
+++ b/app/src/main/res/drawable/ic_painting.xml
@@ -1,5 +1,5 @@
 <vector android:height="24dp" android:viewportHeight="15.0"
     android:viewportWidth="17.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#6A6A6A" android:fillType="evenOdd" android:pathData="M5.782,7.591l3.182,3.182a2.25,2.25 0,1 1,-3.182 -3.182z"/>
-    <path android:fillColor="#6A6A6A" android:fillType="evenOdd" android:pathData="M5.86,10.696c0.876,0.877 0.902,2.273 0.056,3.118 -1.501,1.501 -6.11,0.59 -5.016,-0.414 1.095,-1.004 0.777,-1.697 1.841,-2.76 0.846,-0.846 2.242,-0.82 3.118,0.056zM15.897,2.287l-6.2,7.807a0.1,0.1 0,0 1,-0.15 0.009L6.37,6.925a0.1,0.1 0,0 1,0.008 -0.149l7.808,-6.2a1.218,1.218 0,0 1,1.711 1.711z"/>
+    <path android:fillColor="#6A6A6A" android:pathData="M5.782,7.591l3.182,3.182a2.25,2.25 0,1 1,-3.182 -3.182z"/>
+    <path android:fillColor="#6A6A6A" android:pathData="M5.86,10.696c0.876,0.877 0.902,2.273 0.056,3.118 -1.501,1.501 -6.11,0.59 -5.016,-0.414 1.095,-1.004 0.777,-1.697 1.841,-2.76 0.846,-0.846 2.242,-0.82 3.118,0.056zM15.897,2.287l-6.2,7.807a0.1,0.1 0,0 1,-0.15 0.009L6.37,6.925a0.1,0.1 0,0 1,0.008 -0.149l7.808,-6.2a1.218,1.218 0,0 1,1.711 1.711z"/>
 </vector>
