--- a/app/src/main/res/drawable/ic_comment_24dp.xml
+++ b/app/src/main/res/drawable/ic_comment_24dp.xml
@@ -4,9 +4,6 @@
     android:viewportHeight="24.0"
     android:viewportWidth="24.0">
     <path
-        android:fillColor="#FFFF"
-        android:pathData="M8,6h8a3,3 0,0 1,3 3v5.04a3,3 0,0 1,-3 3L10,17.04L5.781,19.912A0.5,0.5 0,0 1,5 19.5L5,9a3,3 0,0 1,3 -3zM8.75,9h6.5a0.75,0.75 0,1 1,0 1.5h-6.5a0.75,0.75 0,0 1,0 -1.5zM8.75,12.5h3.5a0.75,0.75 0,0 1,0 1.5h-3.5a0.75,0.75 0,0 1,0 -1.5z" />
-    <path
-        android:fillColor="#6A6A6A"
-        android:pathData="M0,0h24v24L0,24z" />
+        android:fillColor="@color/colorSecondary"
+        android:pathData="M21.99,4c0,-1.1 -0.89,-2 -1.99,-2L4,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h14l4,4 -0.01,-18zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z" />
 </vector>
