--- a/app/src/main/res/drawable/ic_pallet.xml
+++ b/app/src/main/res/drawable/ic_pallet.xml
@@ -1,19 +1,19 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="18dp"
     android:height="18dp"
-    android:viewportHeight="17.0"
+    android:viewportHeight="18.0"
     android:viewportWidth="18.0">
     <path
         android:fillColor="#00000000"
         android:pathData="M8.6,15.588l-3.475,-3.474a3,3 0,0 0,-2.121 -0.879H1.059a0.059,0.059 0,0 0,-0.059 0.06v4.234c0,0.033 0.026,0.06 0.059,0.06h7.54zM9.235,12.226v-5.34a2,2 0,0 0,-0.582 -1.411l-2.548,-2.56a0.059,0.059 0,0 0,-0.083 0L3.027,5.91a0.059,0.059 0,0 0,0 0.083l6.208,6.233z"
-        android:strokeColor="#6A6A6A"
+        android:strokeColor="@color/colorSecondary"
         android:strokeWidth="2" />
     <path
-        android:fillColor="#6A6A6A"
+        android:fillColor="@color/colorSecondary"
         android:pathData="M11.941,0h4.353a1,1 0,0 1,1 1v12.412a3.176,3.176 0,1 1,-6.353 0L10.941,1a1,1 0,0 1,1 -1zM14.131,14.47c0.398,0 0.72,-0.315 0.72,-0.705a0.713,0.713 0,0 0,-0.72 -0.706,0.713 0.713,0 0,0 -0.72,0.706c0,0.39 0.323,0.706 0.72,0.706z" />
     <path
         android:fillColor="#00000000"
         android:pathData="M11.941,1v12.412a2.176,2.176 0,1 0,4.353 0L16.294,1h-4.353zM14.131,15.47c-0.945,0 -1.72,-0.759 -1.72,-1.705 0,-0.947 0.775,-1.706 1.72,-1.706 0.946,0 1.72,0.76 1.72,1.706s-0.774,1.706 -1.72,1.706z"
-        android:strokeColor="#6A6A6A"
+        android:strokeColor="@color/colorSecondary"
         android:strokeWidth="2" />
 </vector>
