--- a/app/src/main/res/drawable/metro_circle.xml
+++ b/app/src/main/res/drawable/metro_circle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/transparent" />
+    <solid android:color="@color/white" />
     <size
         android:width="@dimen/feed_item_address_metro_circle_size"
         android:height="@dimen/feed_item_address_metro_circle_size" />
