--- a/app/src/main/res/layout/image_viewer.xml
+++ b/app/src/main/res/layout/image_viewer.xml
@@ -2,22 +2,18 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.utrobin.luna.utils.SwipeableLayout
-        android:id="@+id/swipeableLayout"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:swipeOrientation="bottomToUp">
+        android:background="@color/black">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/image_slider"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_centerInParent="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/image_slider"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_centerInParent="true" />
-
-        </RelativeLayout>
-    </com.utrobin.luna.utils.SwipeableLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
